--- a/src/lib_clic/test/dune
+++ b/src/lib_clic/test/dune
@@ -5,20 +5,22 @@
  (flags (:standard -open Tezos_stdlib
                    -open Tezos_clic)))
 
-(alias
- (name buildtest)
- (deps test_clic.exe))
+(rule
+ (alias buildtest)
+ (deps test_clic.exe)
+ (action (progn)))
 
-(alias
- (name runtest_clic)
+(rule
+ (alias runtest_clic)
  (action (run %{exe:test_clic.exe})))
 
-(alias
- (name runtest)
+(rule
+ (alias runtest)
  (package tezos-clic)
- (deps (alias runtest_clic)))
+ (deps (alias runtest_clic))
+ (action (progn)))
 
-(alias
- (name runtest_lint)
+(rule
+ (alias runtest_lint)
  (deps (glob_files *.ml{,i}))
  (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
