--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -651,13 +651,15 @@ tezt:main:
 tezt:manual:migration:
   <<: *test_definition
   when: manual
-  script:
+  before_script:
     - export TEZOS_CLIENT_UNSAFE_DISABLE_DISCLAIMER=Y
-    - block_hash=$(wget https://snaps.tulip.tools/snapshots.json -O - | jq -r .Snapshots.mainnet_rolling.Blockhash)
-    - filename=$(wget https://snaps.tulip.tools/snapshots.json -O - | jq -r .Snapshots.mainnet_rolling.Filename)
-    - wget https://snaps.tulip.tools/$filename
+    - curl -s https://api.github.com/repos/Phlogi/tezos-snapshots/releases/latest | jq -r ".assets[] | select(.name) | .browser_download_url" | grep roll | xargs wget -q
+    - block_hash=$(echo mainnet.roll.* | sed -r 's/mainnet\.roll\.[0-9_-]+\.(.*)\.[0-9]+\.chain\.xz/\1/g')
+    - cat mainnet.roll.* | xz -d -v -T0 > mainnet.rolling
+
     - make
-    - scripts/prepare_migration_test.sh auto mainnet_*.rolling "$block_hash"
+    - scripts/prepare_migration_test.sh auto mainnet.rolling "$block_hash"
+  script:
     - dune exec ./tezt/manual_tests/main.exe -- migration --color --log-buffer-size 5000 --log-file tezt-migration.log
   artifacts:
     when: always
