--- a/src/lib_crypto/test/dune
+++ b/src/lib_crypto/test/dune
@@ -1,4 +1,4 @@
-(executables
+(tests
  (names test_hacl
         test_merkle
         test_base58
@@ -18,75 +18,6 @@
                    -open Tezos_crypto
                    -open Tezos_lwt_result_stdlib.Lwtreslib
                    -open Data_encoding)))
-
-(rule
- (alias buildtest)
- (deps test_hacl.exe
-       test_merkle.exe
-       test_base58.exe
-       test_ed25519.exe
-       test_p256.exe
-       test_blake2b.exe
-       test_pvss.exe
-       test_crypto_box.exe
-       test_deterministic_nonce.exe
-       test_signature.exe)
- (action (progn)))
-
-(rule
- (alias runtest_hacl)
- (action (run %{exe:test_hacl.exe})))
-
-(rule
- (alias runtest_merkle)
- (action (run %{exe:test_merkle.exe})))
-
-(rule
- (alias runtest_base58)
- (action (run %{exe:test_base58.exe})))
-
-(rule
- (alias runtest_ed25519)
- (action (run %{exe:test_ed25519.exe})))
-
-(rule
- (alias runtest_p256)
- (action (run %{exe:test_p256.exe})))
-
-(rule
- (alias runtest_blake2b)
- (action (run %{exe:test_blake2b.exe})))
-
-(rule
- (alias runtest_pvss)
- (action (run %{exe:test_pvss.exe})))
-
-(rule
- (alias runtest_crypto_box)
- (action (run %{exe:test_crypto_box.exe})))
-
-(rule
- (alias runtest_deterministic_nonce)
- (action (run %{exe:test_deterministic_nonce.exe})))
-
-(rule
- (alias runtest_signature)
- (action (run %{exe:test_signature.exe})))
-
-(rule
- (alias runtest)
- (package tezos-crypto)
- (deps (alias runtest_hacl)
-       (alias runtest_merkle)
-       (alias runtest_base58)
-       (alias runtest_ed25519)
-       (alias runtest_p256)
-       (alias runtest_blake2b)
-       (alias runtest_pvss)
-       (alias runtest_crypto_box)
-       (alias runtest_deterministic_nonce)
-       (alias runtest_signature))
- (action (progn)))
 
 (rule
  (alias runtest_lint)
