opam: constraint requirements to cut branches in opam solver search tree

--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -34,7 +34,7 @@ depends: [
   "tezos-mempool-006-PsCARTHA"
   "tezos-mempool-007-PsDELPH1"
   "cmdliner"
-  "tls"
+  "tls" { >= "0.10" }
   "cstruct"
 ]
 build: [
