--- a/src/lib_stdlib/tezos-stdlib.opam
+++ b/src/lib_stdlib/tezos-stdlib.opam
@@ -9,7 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
   "hex"
-  "lwt"
+  "lwt" { >= "4.0.0" }
   "zarith"
   "ppx_inline_test"
   "bigstring" { with-test }
