--- a/src/proto_demo_counter/lib_protocol/tezos-embedded-protocol-demo-counter.opam
+++ b/src/proto_demo_counter/lib_protocol/tezos-embedded-protocol-demo-counter.opam
@@ -6,7 +6,7 @@ bug-reports: "https://gitlab.com/tezos/tezos/issues"
 dev-repo: "git+https://gitlab.com/tezos/tezos.git"
 license: "MIT"
 depends: [
-  "ocamlfind" { build }
+  "tezos-tooling" { with-test }
   "dune" { >= "2.0" }
   "tezos-protocol-demo-counter"
   "tezos-protocol-compiler"
