shell: adapt dune file for ./script/link_protocol.sh

--- a/src/bin_client/dune
+++ b/src/bin_client/dune
@@ -94,7 +94,8 @@
    (write-file void_for_linking-demo-counter.empty "")
    (write-file void_for_linking-baking-alpha.empty "")
    (write-file void_for_linking-baking-006-PsCARTHA.empty "")
-   (write-file void_for_linking-baking-007-PsDELPH1.empty ""))))
+   (write-file void_for_linking-baking-007-PsDELPH1.empty "")
+)))
 
 (install
  (package tezos-client)
