--- a/tests_python/pyproject.toml
+++ b/tests_python/pyproject.toml
@@ -33,8 +33,9 @@ pytest-regtest = { "git" = "https://gitlab.com/nomadic-labs/pytest-regtest", bra
 pytest-timeout = "*"
 requests = "*"
 black = "^20.8b1"
+# Used to validate the OpenAPI spec.
+openapi-spec-validator = "0.2.9"
 
 [tool.black]
 line-length = 80
 skip-string-normalization = true
-
