--- a/src/lib_lwt_result_stdlib/test/dune
+++ b/src/lib_lwt_result_stdlib/test/dune
@@ -1,22 +1,47 @@
 (executables
- (names test_hashtbl)
+ (names
+  test_hashtbl
+  test_generic
+  test_fuzzing_seq
+  test_fuzzing_set
+ )
  (libraries tezos-lwt-result-stdlib
             tezos-error-monad
             lwt.unix
-            alcotest-lwt)
+            alcotest-lwt
+            crowbar)
  (flags (:standard -open Tezos_lwt_result_stdlib)))
 
-(rule
- (alias buildtest)
- (deps test_hashtbl.exe)
- (action (progn)))
+(alias
+ (name buildtest)
+ (deps
+  test_hashtbl.exe
+  test_generic.exe
+  test_fuzzing_seq.exe
+  test_fuzzing_set.exe
+ ))
 
 (rule
  (alias runtest_hashtbl)
  (action (run %{exe:test_hashtbl.exe})))
+(rule
+ (alias runtest_generic)
+ (action (run %{exe:test_generic.exe})))
+(rule
+ (alias runtest_fuzzing_seq)
+ (action (run %{exe:test_fuzzing_seq.exe})))
+(rule
+ (alias runtest_fuzzing_set)
+ (action (run %{exe:test_fuzzing_set.exe})))
 
 (rule
  (alias runtest)
  (package tezos-lwt-result-stdlib)
- (deps (alias runtest_hashtbl))
- (action (progn)))
+ (deps
+  (alias runtest_hashtbl)
+  (alias runtest_generic)
+  (alias runtest_fuzzing_seq)
+  (alias runtest_fuzzing_set)
+ )
+ (action (progn))
+)
