--- a/src/lib_lwt_result_stdlib/test/dune
+++ b/src/lib_lwt_result_stdlib/test/dune
@@ -1,8 +1,10 @@
 (executables
  (names
   test_hashtbl
+  test_list_basic
   test_generic
   test_fuzzing_seq
+  test_fuzzing_list
   test_fuzzing_set
  )
  (libraries tezos-lwt-result-stdlib
@@ -17,7 +19,9 @@
  (deps
   test_hashtbl.exe
   test_generic.exe
+  test_list_basic.exe
   test_fuzzing_seq.exe
+  test_fuzzing_list.exe
   test_fuzzing_set.exe
  ))
 
@@ -28,8 +32,14 @@
  (alias runtest_generic)
  (action (run %{exe:test_generic.exe})))
 (rule
+ (alias runtest_list_basic)
+ (action (run %{exe:test_list_basic.exe})))
+(rule
  (alias runtest_fuzzing_seq)
  (action (run %{exe:test_fuzzing_seq.exe})))
+(rule
+ (alias runtest_fuzzing_list)
+ (action (run %{exe:test_fuzzing_list.exe})))
 (rule
  (alias runtest_fuzzing_set)
  (action (run %{exe:test_fuzzing_set.exe})))
@@ -40,7 +50,9 @@
  (deps
   (alias runtest_hashtbl)
   (alias runtest_generic)
+  (alias runtest_list_basic)
   (alias runtest_fuzzing_seq)
+  (alias runtest_fuzzing_list)
   (alias runtest_fuzzing_set)
  )
  (action (progn))
