--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -15,6 +15,7 @@
             tezos-error-monad
             tezos-rpc
             tezos-stdlib
+            uecc
             ringo
             zarith))
 
