--- a/src/lib_crypto/tezos-crypto.opam
+++ b/src/lib_crypto/tezos-crypto.opam
@@ -19,6 +19,7 @@ depends: [
   "hacl-star" { >= "0.3" }
   "zarith"
   "secp256k1-internal"
+  "uecc"
   "ringo" { = "0.5" }
   "alcotest" { with-test & >= "1.1.0" }
   "alcotest-lwt" { with-test & >= "1.1.0" }
