--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -13,5 +13,5 @@ keywords = ["tezos"]
 [tool.poetry.dependencies]
 python = "~3.8"
 sphinx = "*"
-sphinx-rtd-theme = "*"
+sphinx-rtd-theme = "0.4.3"
 recommonmark = "*"
