Protocol/coq-of-ocaml: ignore a coq-of-ocaml linting error

--- a/src/proto_alpha/lib_protocol/coq-of-ocaml/config.json
+++ b/src/proto_alpha/lib_protocol/coq-of-ocaml/config.json
@@ -34,7 +34,8 @@
     "storage_functors.mli",
     "storage.ml",
     "storage_sigs.ml",
-    "tez_repr.ml"
+    "tez_repr.ml",
+    "voting_period_repr.ml"
   ],
   "error_message_blacklist": [
     "Unbound module Tezos_protocol_alpha_functor"
