Lwtreslib: add missing test dependency (crowbar)

--- a/src/lib_lwt_result_stdlib/tezos-lwt-result-stdlib.opam
+++ b/src/lib_lwt_result_stdlib/tezos-lwt-result-stdlib.opam
@@ -12,6 +12,7 @@ depends: [
   "tezos-error-monad"
   "lwt"
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "crowbar" { with-test }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
