--- a/src/bin_node/tezos-node.opam
+++ b/src/bin_node/tezos-node.opam
@@ -31,8 +31,10 @@ depends: [
   "tezos-embedded-protocol-005-PsBabyM1"
   "tezos-embedded-protocol-006-PsCARTHA"
   "tezos-embedded-protocol-007-PsDELPH1"
+  "tezos-embedded-protocol-008-PsZ2k9Fh"
   "tezos-mempool-006-PsCARTHA"
   "tezos-mempool-007-PsDELPH1"
+  "tezos-mempool-008-PsZ2k9Fh"
   "cmdliner"
   "tls" { >= "0.10" < "0.11" } # remove the upper bond when the compatibility with hacl-star is restored
   "cstruct"
