--- a/src/lib_protocol_environment/tezos-protocol-environment.opam
+++ b/src/lib_protocol_environment/tezos-protocol-environment.opam
@@ -13,6 +13,8 @@ depends: [
   "tezos-protocol-environment-sigs"
   "tezos-protocol-environment-structs"
   "alcotest-lwt" { with-test & >= "1.1.0" }
+  "crowbar" { with-test }
+  "lwt" { with-test }
   "sapling"
 ]
 build: [
