--- a/docs/doc_gen/dune
+++ b/docs/doc_gen/dune
@@ -5,6 +5,7 @@
             tezos-stdlib-unix
             tezos-shell
             tezos-protocol-updater
+            tezos-embedded-protocol-007-PsDELPH1
             tezos-embedded-protocol-alpha
             re)
  (flags (:standard -open Tezos_base__TzPervasives
