--- a/src/bin_snoop/tezos-snoop.opam
+++ b/src/bin_snoop/tezos-snoop.opam
@@ -10,6 +10,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-benchmark"
+  "tezos-benchmark-examples"
   "tezos-stdlib-unix"
   "tezos-clic"
   "pyml"
