--- a/src/lib_benchmark/lib_micheline_rewriting/tezos-micheline-rewriting.opam
+++ b/src/lib_benchmark/lib_micheline_rewriting/tezos-micheline-rewriting.opam
@@ -15,5 +15,8 @@ depends: [
   "zarith"
   "tezos-stdlib"
   "tezos-error-monad"
+  "alcotest-lwt" {with-test}
+  "tezos-client-alpha" {with-test}
+  "tezos-protocol-alpha" {with-test}
 ]
 synopsis: "Tezos: library for rewriting Micheline expressions"
