--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -338,232 +338,436 @@ integration:sandboxes:daemons-upgrade:
 
 # this section is updated using the script scripts/update_integration_test.sh
 ##BEGIN_INTEGRATION_PYTHON##
-integration:baker_endorser:
+integration:007_baker_endorser:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_baker_endorser.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_baker_endorser.py -s --log-dir=tmp
   stage: test
 
-integration:basic:
+integration:007_basic:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_basic.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_basic.py -s --log-dir=tmp
   stage: test
 
-integration:bootstrap:
+integration:007_bootstrap:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_bootstrap.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_bootstrap.py -s --log-dir=tmp
   stage: test
 
-integration:client_without_node:
+integration:007_client_without_node:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_client_without_node.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_client_without_node.py -s --log-dir=tmp
   stage: test
 
-integration:codec:
+integration:007_codec:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_codec.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_codec.py -s --log-dir=tmp
   stage: test
 
-integration:contract:
+integration:007_contract:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract.py -s --log-dir=tmp
   stage: test
 
-integration:contract_annotations:
+integration:007_contract_annotations:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_annotations.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_annotations.py -s --log-dir=tmp
   stage: test
 
-integration:contract_baker:
+integration:007_contract_baker:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_baker.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_baker.py -s --log-dir=tmp
   stage: test
 
-integration:contract_bls12_381:
+integration:007_contract_legacy:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_bls12_381.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_legacy.py -s --log-dir=tmp
   stage: test
 
-integration:contract_macros:
+integration:007_contract_macros:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_macros.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_macros.py -s --log-dir=tmp
   stage: test
 
-integration:contract_onchain_opcodes:
+integration:007_contract_onchain_opcodes:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_onchain_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_onchain_opcodes.py -s --log-dir=tmp
   stage: test
 
-integration:contract_opcodes:
+integration:007_contract_opcodes:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_contract_opcodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_contract_opcodes.py -s --log-dir=tmp
   stage: test
 
-integration:cors:
+integration:007_cors:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_cors.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_cors.py -s --log-dir=tmp
   stage: test
 
-integration:crypto:
+integration:007_double_endorsement:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_crypto.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_double_endorsement.py -s --log-dir=tmp
   stage: test
 
-integration:deprecated_rpc:
+integration:007_forge_block:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_deprecated_rpc.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_forge_block.py -s --log-dir=tmp
   stage: test
 
-integration:double_endorsement:
+integration:007_fork:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_double_endorsement.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_fork.py -s --log-dir=tmp
   stage: test
 
-integration:forge_block:
+integration:007_injection:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_forge_block.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_injection.py -s --log-dir=tmp
   stage: test
 
-integration:fork:
+integration:007_many_bakers:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_fork.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_many_bakers.py -s --log-dir=tmp
   stage: test
 
-integration:injection:
+integration:007_many_nodes:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_injection.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_many_nodes.py -s --log-dir=tmp
   stage: test
 
-integration:many_bakers:
+integration:007_mempool:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_many_bakers.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_mempool.py -s --log-dir=tmp
   stage: test
 
-integration:many_nodes:
+integration:007_mockup:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_many_nodes.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_mockup.py -s --log-dir=tmp
   stage: test
 
-integration:mempool:
+integration:007_multinode:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_mempool.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multinode.py -s --log-dir=tmp
   stage: test
 
-integration:migration:
+integration:007_multinode_snapshot:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_migration.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multinode_snapshot.py -s --log-dir=tmp
   stage: test
 
-integration:mockup:
+integration:007_multinode_storage_reconstruction:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_mockup.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multinode_storage_reconstruction.py -s --log-dir=tmp
   stage: test
 
-integration:multinode:
+integration:007_multisig:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_multinode.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_multisig.py -s --log-dir=tmp
   stage: test
 
-integration:multinode_snapshot:
+integration:007_openapi:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_multinode_snapshot.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_openapi.py -s --log-dir=tmp
   stage: test
 
-integration:multinode_storage_reconstruction:
+integration:007_p2p:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_p2p.py -s --log-dir=tmp
   stage: test
 
-integration:multisig:
+integration:007_programs:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_multisig.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_programs.py -s --log-dir=tmp
   stage: test
 
-integration:openapi:
+integration:007_proto_demo_counter:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_openapi.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_proto_demo_counter.py -s --log-dir=tmp
   stage: test
 
-integration:p2p:
+integration:007_proto_demo_noops_manual_bake:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_p2p.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
   stage: test
 
-integration:programs:
+integration:007_rpc:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_programs.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_rpc.py -s --log-dir=tmp
   stage: test
 
-integration:proto_demo_counter:
+integration:007_tls:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_proto_demo_counter.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_tls.py -s --log-dir=tmp
   stage: test
 
-integration:proto_demo_noops_manual_bake:
+integration:007_voting:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_voting.py -s --log-dir=tmp
   stage: test
 
-integration:rpc:
+integration:007_voting_full:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_rpc.py -s --log-dir=tmp
+    - poetry run pytest tests_007/test_voting_full.py -s --log-dir=tmp
   stage: test
 
-integration:sapling:
+integration:alpha_baker_endorser:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_sapling.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_baker_endorser.py -s --log-dir=tmp
   stage: test
 
-integration:tls:
+integration:alpha_basic:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_tls.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_basic.py -s --log-dir=tmp
   stage: test
 
-integration:voting:
+integration:alpha_bootstrap:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_voting.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_bootstrap.py -s --log-dir=tmp
   stage: test
 
-integration:voting_full:
+integration:alpha_client_without_node:
   <<: *integration_python_definition
   script:
-    - poetry run pytest tests/test_voting_full.py -s --log-dir=tmp
+    - poetry run pytest tests_alpha/test_client_without_node.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_codec:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_codec.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_annotations:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_annotations.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_baker:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_baker.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_bls12_381:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_bls12_381.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_macros:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_macros.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_onchain_opcodes:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_onchain_opcodes.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_contract_opcodes:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_contract_opcodes.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_cors:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_cors.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_crypto:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_crypto.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_deprecated_rpc:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_deprecated_rpc.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_double_endorsement:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_double_endorsement.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_forge_block:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_forge_block.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_fork:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_fork.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_injection:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_injection.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_many_bakers:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_many_bakers.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_many_nodes:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_many_nodes.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_mempool:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_mempool.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_migration:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_migration.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_mockup:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_mockup.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_multinode:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_multinode.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_multinode_snapshot:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_multinode_snapshot.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_multinode_storage_reconstruction:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_multinode_storage_reconstruction.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_multisig:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_multisig.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_openapi:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_openapi.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_p2p:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_p2p.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_programs:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_programs.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_proto_demo_counter:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_proto_demo_counter.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_proto_demo_noops_manual_bake:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_proto_demo_noops_manual_bake.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_rpc:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_rpc.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_sapling:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_sapling.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_tls:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_tls.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_voting:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_voting.py -s --log-dir=tmp
+  stage: test
+
+integration:alpha_voting_full:
+  <<: *integration_python_definition
+  script:
+    - poetry run pytest tests_alpha/test_voting_full.py -s --log-dir=tmp
   stage: test
 
 integration:examples_forge_transfer:
