--- a/src/bin_sandbox/dune
+++ b/src/bin_sandbox/dune
@@ -46,7 +46,31 @@
          )))
 
 (rule
-  (alias runtest_sandbox_user_activated_upgrade)
+  (alias runtest_sandbox_user_activated_upgrade_active)
+  (locks /tcp-port/40000_range)
+  (action
+    (run %{exe:main.exe} mini-net
+         --root-path %{env:ROOT_PATH=/tmp/flextesa-hard-fork/}
+         --base-port 40_000
+         --size 2
+         --number-of-b 2
+         --with-timestamp
+         --until 20
+         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
+         --protocol-kind Carthage
+         --tezos-client %{bin:tezos-client}
+         --tezos-node %{bin:tezos-node}
+         --tezos-baker %{bin:tezos-baker-006-PsCARTHA}
+         --tezos-endorser %{bin:tezos-endorser-006-PsCARTHA}
+         --tezos-accuser %{bin:tezos-accuser-006-PsCARTHA}
+         --hard-fork 10:PsDELPH1Kxsxt8f9eWbxQeRxkjfbxoqM52jvs5Y5fBxWWh4ifpo
+         --hard-fork-baker %{bin:tezos-baker-007-PsDELPH1}
+         --hard-fork-endorser %{bin:tezos-endorser-007-PsDELPH1}
+         --hard-fork-accuser %{bin:tezos-accuser-007-PsDELPH1}
+         )))
+
+(rule
+  (alias runtest_sandbox_user_activated_upgrade_alpha)
   (locks /tcp-port/40000_range)
   (action
     (run %{exe:main.exe} mini-net
@@ -69,9 +93,36 @@
          --hard-fork-accuser %{bin:tezos-accuser-alpha}
          )))
 
+(rule
+  (alias runtest_sandbox_daemons_upgrade_active)
+  (locks /tcp-port/50000_range)
+  (action
+    (run %{exe:main.exe} daemons-upgrade
+         %{lib:tezos-protocol-007-PsDELPH1:raw/TEZOS_PROTOCOL}
+         --root-path %{env:ROOT_PATH=/tmp/flextesa-daemons-upgrade/}
+         --base-port 50_000
+         --extra-dummy-proposals-batch-size 2
+         --extra-dummy-proposals-batch-levels 3,5
+         --size 2
+         --number-of-b 2
+         --time-betw 3
+         --blocks-per-vot 14
+         --with-timestamp
+         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
+         --protocol-kind Carthage
+         --tezos-client %{bin:tezos-client}
+         --tezos-admin %{bin:tezos-admin-client}
+         --tezos-node %{bin:tezos-node}
+         --first-baker %{bin:tezos-baker-006-PsCARTHA}
+         --first-endorser %{bin:tezos-endorser-006-PsCARTHA}
+         --first-accuser %{bin:tezos-accuser-006-PsCARTHA}
+         --second-baker %{bin:tezos-baker-007-PsDELPH1}
+         --second-endorser %{bin:tezos-endorser-007-PsDELPH1}
+         --second-accuser %{bin:tezos-accuser-007-PsDELPH1}
+         )))
 
 (rule
-  (alias runtest_sandbox_daemons_upgrade)
+  (alias runtest_sandbox_daemons_upgrade_alpha)
   (locks /tcp-port/50000_range)
   (action
     (run %{exe:main.exe} daemons-upgrade
@@ -176,7 +227,9 @@
   (alias runtest_sandbox_accusations_simple_double_baking)
   (alias runtest_sandbox_accusations_simple_double_endorsing)
   (alias runtest_sandbox_voting_demo_noops)
-  (alias runtest_sandbox_user_activated_upgrade)
-  (alias runtest_sandbox_daemons_upgrade)
+  (alias runtest_sandbox_user_activated_upgrade_active)
+  (alias runtest_sandbox_user_activated_upgrade_alpha)
+  (alias runtest_sandbox_daemons_upgrade_active)
+  (alias runtest_sandbox_daemons_upgrade_alpha)
   (alias runtest_sandbox_node_synchronization))
  (action (progn)))
