--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ stages:
   - doc
   - packaging
   - publish
+  - publish_manifest
   - test_coverage
   - publish_coverage
 
@@ -1407,13 +1408,57 @@ opam:uecc:
 ## Stage: publish                                         ##
 ############################################################
 
-publish:docker:
+.publish_template: &publish_definition
   image: docker:latest
   services:
     - docker:dind
   variables:
     DOCKER_DRIVER: overlay2
+    IMAGE_ARCH_PREFIX: ""
   stage: publish
+  only:
+    - master@tezos/tezos
+    - tags@tezos/tezos
+    - /-release$/@tezos/tezos
+  before_script:
+    - mkdir ~/.docker || true
+    - echo "{ \"auths\":{ \"https://index.docker.io/v1/\":{ \"auth\":\"${CI_DOCKER_AUTH}\" } } }" > ~/.docker/config.json
+  script:
+    - ./scripts/create_docker_image.sh
+        "${public_docker_image_name}"
+        "${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
+        "${build_deps_image_name}"
+        "${build_deps_image_version}"
+        "${CI_COMMIT_SHORT_SHA}"
+    - docker push "${public_docker_image_name}:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
+    - docker push "${public_docker_image_name}-bare:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
+    - docker push "${public_docker_image_name}-debug:${IMAGE_ARCH_PREFIX}${CI_COMMIT_REF_NAME}"
+  interruptible: false
+
+publish:docker_amd64:
+  <<: *publish_definition
+  variables:
+    DOCKER_DRIVER: overlay2
+    IMAGE_ARCH_PREFIX: "amd64-"
+  tags:
+    - safe_docker
+
+publish:docker_arm64:
+  <<: *publish_definition
+  variables:
+    DOCKER_DRIVER: overlay2
+    IMAGE_ARCH_PREFIX: "arm64-"
+  tags:
+    - arm64
+
+merge-manifest:
+  image: docker:latest
+  services:
+    - name: "docker:dind"
+      command: ["--experimental"]
+  variables:
+    DOCKER_DRIVER: overlay2
+  stage: publish_manifest
   only:
     - master@tezos/tezos
     - tags@tezos/tezos
@@ -1421,32 +1466,33 @@ publish:docker:
   before_script:
     - apk add git binutils
     - mkdir ~/.docker || true
-    - echo "{ \"auths\":{ \"https://index.docker.io/v1/\":{ \"auth\":\"${CI_DOCKER_AUTH}\" } } }" > ~/.docker/config.json
+    - echo "{ \"experimental\":\"enabled\", \"auths\":{ \"https://index.docker.io/v1/\":{ \"auth\":\"${CI_DOCKER_AUTH}\" } } }" > ~/.docker/config.json
   script:
     - LAST_COMMIT_DATE_TIME=$(git log --pretty=format:"%cd" -1 --date="format:%Y%m%d%H%M%S" 2>&1)
-    - ./scripts/create_docker_image.sh
-        "${public_docker_image_name}"
-        "${CI_COMMIT_REF_NAME}"
-        "${build_deps_image_name}"
-        "${build_deps_image_version}"
-        "${CI_COMMIT_SHORT_SHA}"
-    - docker push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
-    - docker push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
-    - docker push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
-    - docker tag
-      "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
-      "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker tag
-      "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
-      "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker tag
-      "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
-      "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-    - docker push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
-  tags:
-    - safe_docker
+    - docker manifest create "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-bare:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-bare:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}"
+    - docker manifest create "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
+      --amend "${public_docker_image_name}-bare:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-bare:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}-bare:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
+    - docker manifest create "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-debug:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-debug:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}"
+    - docker manifest create "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
+      --amend "${public_docker_image_name}-debug:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}-debug:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}-debug:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
+    - docker manifest create "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}"
+    - docker manifest create "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
+      --amend "${public_docker_image_name}:amd64-${CI_COMMIT_REF_NAME}"
+      --amend "${public_docker_image_name}:arm64-${CI_COMMIT_REF_NAME}"
+    - docker manifest push "${public_docker_image_name}:${CI_COMMIT_REF_NAME}_${CI_COMMIT_SHORT_SHA}_${LAST_COMMIT_DATE_TIME}"
   interruptible: false
 
 publish:doc:
